@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-12T08:27:33Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_decinc" : [ -0, +1 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2022-08-12T16:37:09Z",
+  "count" : 12,
+  "count_minmax" : [ 1, 12 ],
+  "count_decinc" : [ -0, +12 ],
+  "uniques" : 8,
+  "uniques_minmax" : [ 1, 8 ],
+  "uniques_decinc" : [ -0, +8 ]
 }
