@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-12T08:27:33Z",
+  "timestamp" : "2022-08-12T16:37:09Z",
   "count_outdated" : 413,
   "uniques_outdated" : 257,
-  "count" : 434,
-  "uniques" : 275,
+  "count" : 445,
+  "uniques" : 282,
   "clones" : [
     {
       "timestamp": "2022-07-29T00:00:00Z",
@@ -56,10 +56,10 @@
     },
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 12,
+      "count_minmax": [ 1, 12 ],
+      "uniques": 8,
+      "uniques_minmax": [ 1, 8 ]
     }
   ]
 }
