@@ -1,6 +1,6 @@
 {
-  "count": 21,
-  "uniques": 14,
+  "count": 32,
+  "uniques": 19,
   "clones": [
     {
       "timestamp": "2022-07-29T00:00:00Z",
@@ -39,8 +39,8 @@
     },
     {
       "timestamp": "2022-08-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 12,
+      "uniques": 8
     }
   ]
 }
