@@ -1,3 +1,10 @@
+2022-08-12T16:37:09Z:
+* notice: last 14d: unq all: 19 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 257 413 / 275 434
+* notice: next accum: outdated-unq outdated-all / unq all: 257 413 / 282 445
+* notice: prev exec diff / last date diff / accum: unq all: +7 +11 -0 -0 / +8 +12 -0 -0 / 8 12
+* notice: removed / changed dates: [] / [2022-08-12]
+
 2022-08-12T08:27:33Z:
 * notice: last 14d: unq all: 14 21
 * notice: prev accum: outdated-unq outdated-all / unq all: 257 413 / 274 434
